[metadata]
author = Dwight Hubbard
author_email = dhubbard@verizonmedia.com
description = Bandersnatch filtering plugin for safety_db
long_description = file:README.md
long_description_content_type = text/markdown
name = bandersnatch_safety_db
url = https://github.com/dhubbard/bandersnatch_safety_db
version = 0.0.0

[options]
install_requires =
    packaging
    requests
    bandersnatch > 3.3.0
    setuptools > 34.0.0

packages =
    bandersnatch_safety_db

python_requires = >=3.6

[options.entry_points]
bandersnatch_filter_plugins.release =
    safety_db_release = bandersnatch_safety_db.safety_db:SafetyDBReleaseFilter

bandersnatch_filter_plugins.v2.release =
    safety_db_release = bandersnatch_safety_db.safety_db:SafetyDBReleaseFilterV2

[options.extras_require]
safety_package =
    safety-db

test =
    pytest
    pytest-cov
    vcrpy-unittest

doc_build =
    sphinx
    sphinx_bootstrap_theme
    guzzle_sphinx_theme
    sphinx_rtd_theme
    recommonmark

[pycodestyle]
count = False
ignore = E226,E302,E41
max-line-length = 160
statistics = True
