[metadata]
author = Dwight Hubbard
author_email = dhubbard@verizonmedia.com
classifiers =
    License :: OSI Approved :: Academic Free License (AFL)
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
description = Bandersnatch filtering plugin for safety_db
keywords = bandersnatch python package mirror safety_db
license = Academic Free License, version 3
license_file = LICENSE
long_description = file:README.md
long_description_content_type = text/markdown
name = bandersnatch_safety_db
url = https://github.com/dhubbard/bandersnatch_safety_db
version = 0.0.1

[options]
install_requires =
    packaging
    requests
    bandersnatch > 3.3.0
    setuptools > 40.0.0

packages =
    bandersnatch_safety_db

python_requires = >=3.6
zip_safe = True

[options.entry_points]
bandersnatch_filter_plugins.release =
    safety_db_release = bandersnatch_safety_db.safety_db:SafetyDBReleaseFilter

bandersnatch_filter_plugins.v2.release =
    safety_db_release = bandersnatch_safety_db.safety_db:SafetyDBReleaseFilterV2

[options.extras_require]
safety_package =
    safety-db

test =
    pytest
    pytest-cov
    vcrpy-unittest

doc_build =
    sphinx
    sphinx_bootstrap_theme
    guzzle_sphinx_theme
    sphinx_rtd_theme
    recommonmark

[pycodestyle]
count = False
ignore = E226,E302,E41
max-line-length = 160
statistics = True
