[metadata]
author = Dwight Hubbard
author_email = 254983+dwighthubbard@users.noreply.github.com
classifiers =
    License :: OSI Approved :: Academic Free License (AFL)
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
description = Bandersnatch filtering plugin to filter packages listed in safety_db
description_content_type = text/markdown
keywords = bandersnatch python package mirror safety_db
license = Academic Free License, version 3
license_file = LICENSE
long_description = file:README.md
long_description_content_type = text/markdown
name = bandersnatch_safety_db
project_urls =
    Source = https://github.com/dwighthubbard/bandersnatch_safety_db
url = https://github.com/dwighthubbard/bandersnatch_safety_db
version = 0.2.1

[options]
install_requires =
    packaging
    requests
    bandersnatch > 3.3.0
    setuptools > 40.0.0

packages =
    bandersnatch_safety_db

python_requires = >=3.6
zip_safe = True

[options.entry_points]
# Plugin for bandersnatch 3.3.x
bandersnatch_filter_plugins.release =
    safety_db_release = bandersnatch_safety_db.safety_db:SafetyDBReleaseFilter

# Plugin for bandersnatch 3.4.x
bandersnatch_filter_plugins.v2.release =
    safety_db_release = bandersnatch_safety_db.safety_db:SafetyDBReleaseFilterV2

[options.extras_require]
safety_package =
    safety-db

test =
    pytest
    pytest-cov
    vcrpy-unittest

doc_build =
    sphinx
    sphinx_bootstrap_theme
    guzzle_sphinx_theme
    sphinx_rtd_theme
    recommonmark

[mypy]
ignore_missing_imports = True

[pycodestyle]
count = False
# ignore = E226,E302,E41
max-line-length = 160
statistics = True

[screwdrivercd.version]
version_type = sdv4_SD_BUILD
